支持后台自动清理

--- a/NuGetCleaner/NuGetCleaner.csproj
+++ b/NuGetCleaner/NuGetCleaner.csproj
@@ -102,12 +102,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\BackgroundNuGetCleanerService.cs" />
     <Compile Include="Services\MetricsService.cs" />
     <Compile Include="Services\SettingsService.cs" />
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Services\NuGetCleaner.cs" />
+    <Compile Include="Services\NuGetCleanerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
   </ItemGroup>
@@ -186,6 +187,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
+      <Version>5.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.PlatformSpecificAnalyzer">
       <Version>5.1.0</Version>
